--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
 {
-  "name": "mocha + chai calculator example",
+  "name": "mocha-chai-calculator",
   "version": "0.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "mocha"
   },
-  "devDependencies": {
-    "chai": "^3.0.0",
-    "istanbul": "^0.3.17",
-    "mocha": "^2.2.5"
-  },
   "author": "Misha Mykhalyuk",
   "license": "ISC",
-  "dependencies": {
-    "rewire": "^2.3.4"
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0"
   }
 }
